# pymathlite

./: README.md  matrix.py  pyproject.toml
src/pymathlite/: __init__.py  matrix.py
tests/: test_matrix.py
